apps/influxdb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: influxdb
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
