apps/influxdb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb-pod
          image: influxdb:2.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
          volumeMounts:
            - name: influxdb-data
              mountPath: /var/lib/influxdb2
            - name: influxdb-config
              mountPath: /etc/influxdb2
      volumes:
        - name: influxdb-config
          persistentVolumeClaim:
            claimName: influxdb-config-pvc
        - name: influxdb-data
          persistentVolumeClaim:
            claimName: influxdb-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
  labels:
    app: influxdb
spec:
  ports:
    - name: influxdb
      port: 8086
      targetPort: 8086
  selector:
    app: influxdb
